# cscs-key

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  cscs-key-docker  docker-entrypoint.sh
UI/: Cargo.toml  Readme.md
UI/packaging/macos/: Info.plist.template
UI/scripts/: package-macos.sh
UI/src/: main.rs
UI/static/: app.js  index.html  styles.css
src/: config.rs  main.rs  oidc.rs  ssh.rs  state.rs
templates/: oidc_auth_success.html
