[package]
name = "cscs-key-ui"
version = "0.1.0"
edition = "2024"
default-run = "cscs-key-ui"
description = "Native desktop shell for the cscs-key CLI"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["json"] }
clap = { version = "4.5.40", features = ["derive"] }
dirs = "6.0.0"
image = { version = "0.25.8", default-features = false, features = ["png"] }
serde = { version = "1.0.228", features = ["derive"] }
tao = "0.34.5"
tokio = { version = "1.48.0", features = ["macros", "process", "rt-multi-thread", "signal", "net", "sync"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
webbrowser = "1.0.6"
which = "8.0.0"
wry = "0.53.5"